[workspace]
resolver = "2"
members = [
    "fsutil", 
    "fsutil-cli", 
    "fsutil-core", 
    "fsutil-ftp", 
    "fsutil-memory", 
    "fsutil-smb", 
    "fsutil-ssh"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]

[workspace.dependencies]
fsutil-core = { version = "0.0.1", path = "fsutil-core" }
fsutil-ftp = { version = "0.0.1", path = "fsutil-ftp" }
fsutil-memory = { version = "0.0.1", path = "fsutil-memory" }
fsutil-smb = { version = "0.0.1", path = "fsutil-smb" }
fsutil-ssh = { version = "0.0.1", path = "fsutil-ssh" }
futures = "0.3"
tokio = { version = "1" }
anyhow = { version = "1" }
thiserror = "1.0"
log = { version = "0.4" }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1" }
wildmatch = { version = "2" }
