[package]
name = "fsutil-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
wildmatch = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
pretty_assertions = "^1"
tempfile = "^3"
