[package]
name = "fsutil-smb"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
fsutil-core = { workspace = true }
tracing = { workspace = true }

[target."cfg(target_family = \"unix\")"]
[target."cfg(target_family = \"unix\")".dependencies]
libc = "^0.2"
pavao = "^0.2.12"

[target."cfg(target_family = \"windows\")"]
[target."cfg(target_family = \"windows\")".dependencies]
filetime = "^0.2"
windows-sys = { version = "^0.59", features = [
  "Win32_NetworkManagement_WNet",
  "Win32_Foundation",
] }

[dev-dependencies]
anyhow = { workspace = true }
argh = "^0.1"
tracing-subscriber = { workspace = true }
pretty_assertions = "^1"
rpassword = "7.2"
serial_test = "^3"
tempfile = "^3"

[features]
# misc
no-log = ["tracing/max_level_off"]
vendored = ["pavao/vendored"]
# tests
with-containers = []
